# FeedHub

./: main.py  pyproject.toml
app/: users.py
backend/: .gitignore  README.md
backend/app/: app.py  db.py  images.py  schemas.py  users.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(pages)/: layout.tsx  page.tsx
frontend/app/(pages)/login/: page.tsx
frontend/app/(pages)/profile/: page.tsx
frontend/app/(pages)/shared/: page.tsx
frontend/app/(pages)/signup/: page.tsx
frontend/app/(pages)/upload/: page.tsx
frontend/components/atoms/: index.ts
frontend/components/atoms/Checkbox/: Checkbox.tsx
frontend/components/atoms/Empty/: index.ts
frontend/components/atoms/Form/: Form.tsx
frontend/components/molecules/: index.ts
frontend/components/molecules/FormField/: FormField.tsx  index.ts
frontend/components/molecules/MediaCard/: MediaCard.tsx  index.ts
frontend/components/molecules/MediaFilter/: MediaFilter.tsx  index.ts
frontend/components/molecules/MediaUpload/: MediaUpload.tsx  index.ts
frontend/components/molecules/SearchBar/: SearchBar.tsx
frontend/components/molecules/UserCard/: UserCard.tsx
frontend/components/organisms/: index.ts
frontend/components/templates/: index.ts
frontend/lib/api/: auth.ts  client.ts  index.ts  posts.ts  users.ts
frontend/lib/components/: ConfirmDialog.tsx  ErrorBoundary.tsx  ProtectedPage.tsx  Skeleton.tsx
frontend/lib/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/lib/hooks/: useProtectedRoute.ts
(+14 files in other folders)
